[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sam_droplet"
version = "0.1.0"
description = "sam implementation for droplet counting"
readme = "README.rst"
authors = [
  {name = "gavin lou", email = "gavinlouuu@gmail.com"}
]
maintainers = [
  {name = "gavin lou", email = "gavinlouuu@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/gavinlouuu-kpt/sam_droplet/issues"
changelog = "https://github.com/gavinlouuu-kpt/sam_droplet/blob/master/changelog.md"
homepage = "https://github.com/gavinlouuu-kpt/sam_droplet"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

